--- a/test/Specifications/EFCore.Bulk.Tests-5.0.csproj
+++ b/test/Specifications/EFCore.Bulk.Tests-5.0.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <DefineConstants>$(DefineConstants);EFCORE50</DefineConstants>
     <IsPackable>false</IsPackable>
     <AssemblyName>Microsoft.EntityFrameworkCore.Bulk.Tests</AssemblyName>
     <RootNamespace>Microsoft.EntityFrameworkCore.Tests</RootNamespace>
@@ -15,6 +16,13 @@
   <ItemGroup>
     <ProjectReference Include="..\..\src\Abstraction\Microsoft.EntityFrameworkCore.Bulk-5.0.csproj" />
     <ProjectReference Include="..\TestUtilities\EFCore.TestUtilities.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <AssemblyAttribute Include="Xunit.TestCaseOrdererAttribute">
+      <_Parameter1>Microsoft.EntityFrameworkCore.TestUtilities.Xunit.TestPriorityOrderer</_Parameter1>
+      <_Parameter2>Microsoft.EntityFrameworkCore.TestUtilities</_Parameter2>
+    </AssemblyAttribute>
   </ItemGroup>
 
 </Project>
