--- a/src/Abstraction/Microsoft.EntityFrameworkCore.Bulk-3.1.csproj
+++ b/src/Abstraction/Microsoft.EntityFrameworkCore.Bulk-3.1.csproj
@@ -2,14 +2,15 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <DefineConstants>$(DefineConstants);EFCORE31</DefineConstants>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <AssemblyName>Microsoft.EntityFrameworkCore.Bulk</AssemblyName>
     <RootNamespace>Microsoft.EntityFrameworkCore</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="$(EntityFrameworkCoreVersion)" Condition=" $(EFCoreSourceDirectory) == '' " />
-    <ProjectReference Include="$(EFCoreSourceDirectory)\src\EFCore\EFCore.csproj" Condition=" $(EFCoreSourceDirectory) != '' " />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="$(EFCore31Version)" Condition=" $(EFCore31SourceDirectory) == '' " />
+    <ProjectReference Include="$(EFCore31SourceDirectory)\src\EFCore\EFCore.csproj" Condition=" $(EFCore31SourceDirectory) != '' " />
   </ItemGroup>
 
 </Project>
