--- a/src/InMemory/Microsoft.EntityFrameworkCore.Bulk.InMemory-3.1.csproj
+++ b/src/InMemory/Microsoft.EntityFrameworkCore.Bulk.InMemory-3.1.csproj
@@ -2,15 +2,15 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <DefineConstants>$(DefineConstants);IN_MEMORY</DefineConstants>
+    <DefineConstants>$(DefineConstants);EFCORE31;IN_MEMORY</DefineConstants>
     <AssemblyName>Microsoft.EntityFrameworkCore.Bulk.InMemory</AssemblyName>
     <RootNamespace>Microsoft.EntityFrameworkCore</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="$(EntityFrameworkCoreVersion)" Condition=" $(EFCoreSourceDirectory) == '' " />
-    <ProjectReference Include="$(EFCoreSourceDirectory)\src\EFCore.InMemory\EFCore.InMemory.csproj" Condition=" $(EFCoreSourceDirectory) != '' " />
-    <ProjectReference Include="..\Abstraction\Microsoft.EntityFrameworkCore.Bulk-$(DotNetCoreVersion).csproj" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="$(EFCore31Version)" Condition=" $(EFCore31SourceDirectory) == '' " />
+    <ProjectReference Include="$(EFCore31SourceDirectory)\src\EFCore.InMemory\EFCore.InMemory.csproj" Condition=" $(EFCore31SourceDirectory) != '' " />
+    <ProjectReference Include="..\Abstraction\Microsoft.EntityFrameworkCore.Bulk-3.1.csproj" />
   </ItemGroup>
 
 </Project>
