--- a/src/MySql/Microsoft.EntityFrameworkCore.Bulk.MySql-5.0.csproj
+++ b/src/MySql/Microsoft.EntityFrameworkCore.Bulk.MySql-5.0.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
-    <DefineConstants>$(DefineConstants);RELATIONAL;MYSQL</DefineConstants>
+    <DefineConstants>$(DefineConstants);EFCORE50;RELATIONAL;MYSQL</DefineConstants>
     <AssemblyName>Microsoft.EntityFrameworkCore.Bulk.MySql</AssemblyName>
     <RootNamespace>Microsoft.EntityFrameworkCore</RootNamespace>
   </PropertyGroup>
@@ -12,9 +12,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="$(EFCorePomeloCoreVersion)" Condition=" $(EFCoreMySourceDirectory) == '' " />
-    <ProjectReference Include="$(EFCoreMySourceDirectory)\src\EFCore.MySql\EFCore.MySql.csproj" Condition=" $(EFCoreMySourceDirectory) != '' " />
-    <ProjectReference Include="..\Relational\Microsoft.EntityFrameworkCore.Bulk.Relational-$(DotNetCoreVersion).csproj" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="$(EFCore50PomeloVersion)" Condition=" $(EFCore50MySourceDirectory) == '' " />
+    <ProjectReference Include="$(EFCore50MySourceDirectory)\src\EFCore.MySql\EFCore.MySql.csproj" Condition=" $(EFCore50MySourceDirectory) != '' " />
+    <ProjectReference Include="..\Relational\Microsoft.EntityFrameworkCore.Bulk.Relational-5.0.csproj" />
   </ItemGroup>
 
 </Project>
