--- a/src/Relational/Microsoft.EntityFrameworkCore.Bulk.Relational-5.0.csproj
+++ b/src/Relational/Microsoft.EntityFrameworkCore.Bulk.Relational-5.0.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
-    <DefineConstants>$(DefineConstants);RELATIONAL</DefineConstants>
+    <DefineConstants>$(DefineConstants);EFCORE50;RELATIONAL</DefineConstants>
     <AssemblyName>Microsoft.EntityFrameworkCore.Bulk.Relational</AssemblyName>
     <RootNamespace>Microsoft.EntityFrameworkCore</RootNamespace>
   </PropertyGroup>
@@ -12,9 +12,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="$(EntityFrameworkCoreVersion)" Condition=" $(EFCoreSourceDirectory) == '' " />
-    <ProjectReference Include="$(EFCoreSourceDirectory)\src\EFCore.Relational\EFCore.Relational.csproj" Condition=" $(EFCoreSourceDirectory) != '' " />
-    <ProjectReference Include="..\Abstraction\Microsoft.EntityFrameworkCore.Bulk-$(DotNetCoreVersion).csproj" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="$(EFCore50Version)" Condition=" $(EFCore50SourceDirectory) == '' " />
+    <ProjectReference Include="$(EFCore50SourceDirectory)\src\EFCore.Relational\EFCore.Relational.csproj" Condition=" $(EFCore50SourceDirectory) != '' " />
+    <ProjectReference Include="..\Abstraction\Microsoft.EntityFrameworkCore.Bulk-5.0.csproj" />
   </ItemGroup>
 
 </Project>
