--- a/test/Cacheable/EFCore.Cacheable.Tests-3.1.csproj
+++ b/test/Cacheable/EFCore.Cacheable.Tests-3.1.csproj
@@ -1,7 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <DefineConstants>$(DefineConstants);EFCORE31</DefineConstants>
     <IsPackable>false</IsPackable>
     <AssemblyName>Microsoft.EntityFrameworkCore.Cacheable.Tests</AssemblyName>
     <RootNamespace>Microsoft.EntityFrameworkCore.Tests</RootNamespace>
@@ -17,6 +18,13 @@
   <ItemGroup>
     <ProjectReference Include="..\TestUtilities\EFCore.TestUtilities.csproj" />
     <ProjectReference Include="..\..\src\InMemory\Microsoft.EntityFrameworkCore.Bulk.InMemory-3.1.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <AssemblyAttribute Include="Xunit.TestCaseOrdererAttribute">
+      <_Parameter1>Microsoft.EntityFrameworkCore.TestUtilities.Xunit.TestPriorityOrderer</_Parameter1>
+      <_Parameter2>Microsoft.EntityFrameworkCore.TestUtilities</_Parameter2>
+    </AssemblyAttribute>
   </ItemGroup>
 
 </Project>
