--- a/src/PostgreSql/EFCore.Bulk.PostgreSql-5.0.csproj
+++ b/src/PostgreSql/EFCore.Bulk.PostgreSql-5.0.csproj
@@ -5,6 +5,7 @@
     <DefineConstants>$(DefineConstants);EFCORE50;RELATIONAL;POSTGRE_SQL</DefineConstants>
     <AssemblyName>Microsoft.EntityFrameworkCore.Bulk.PostgreSql</AssemblyName>
     <RootNamespace>Microsoft.EntityFrameworkCore</RootNamespace>
+    <PackageId>$(ExtensionPackagePrefix).PostgreSql</PackageId>
   </PropertyGroup>
 
   <ItemGroup>
@@ -14,7 +15,7 @@
   <ItemGroup>
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="$(EFCore50NpgsqlVersion)" Condition=" $(EFCore50PgSourceDirectory) == '' " />
     <ProjectReference Include="$(EFCore50PgSourceDirectory)\src\EFCore.PG\EFCore.PG.csproj" Condition=" $(EFCore50PgSourceDirectory) != '' " />
-    <ProjectReference Include="..\Relational\Microsoft.EntityFrameworkCore.Bulk.Relational-5.0.csproj" />
+    <ProjectReference Include="..\Relational\EFCore.Bulk.Relational-5.0.csproj" />
   </ItemGroup>
 
 </Project>
