--- a/src/Relational/EFCore.Bulk.Relational-3.1.csproj
+++ b/src/Relational/EFCore.Bulk.Relational-3.1.csproj
@@ -5,6 +5,7 @@
     <DefineConstants>$(DefineConstants);EFCORE31;RELATIONAL</DefineConstants>
     <AssemblyName>Microsoft.EntityFrameworkCore.Bulk.Relational</AssemblyName>
     <RootNamespace>Microsoft.EntityFrameworkCore</RootNamespace>
+    <PackageId>$(ExtensionPackagePrefix).Relational</PackageId>
   </PropertyGroup>
 
   <ItemGroup>
@@ -14,7 +15,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="$(EFCore31Version)" Condition=" $(EFCore31SourceDirectory) == '' " />
     <ProjectReference Include="$(EFCore31SourceDirectory)\src\EFCore.Relational\EFCore.Relational.csproj" Condition=" $(EFCore31SourceDirectory) != '' " />
-    <ProjectReference Include="..\Abstraction\Microsoft.EntityFrameworkCore.Bulk-3.1.csproj" />
+    <ProjectReference Include="..\Abstraction\EFCore.Bulk-3.1.csproj" />
   </ItemGroup>
 
 </Project>
