--- a/src/SqlServer/EFCore.Bulk.SqlServer-3.1.csproj
+++ b/src/SqlServer/EFCore.Bulk.SqlServer-3.1.csproj
@@ -5,6 +5,7 @@
     <DefineConstants>$(DefineConstants);EFCORE31;RELATIONAL;SQL_SERVER</DefineConstants>
     <AssemblyName>Microsoft.EntityFrameworkCore.Bulk.SqlServer</AssemblyName>
     <RootNamespace>Microsoft.EntityFrameworkCore</RootNamespace>
+    <PackageId>$(ExtensionPackagePrefix).SqlServer</PackageId>
   </PropertyGroup>
 
   <ItemGroup>
@@ -14,7 +15,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="$(EFCore31Version)" Condition=" $(EFCore31SourceDirectory) == '' " />
     <ProjectReference Include="$(EFCore31SourceDirectory)\src\EFCore.SqlServer\EFCore.SqlServer.csproj" Condition=" $(EFCore31SourceDirectory) != '' " />
-    <ProjectReference Include="..\Relational\Microsoft.EntityFrameworkCore.Bulk.Relational-3.1.csproj" />
+    <ProjectReference Include="..\Relational\EFCore.Bulk.Relational-3.1.csproj" />
   </ItemGroup>
 
 </Project>
