--- a/src/SqlServer/EFCore.Bulk.SqlServer-5.0.csproj
+++ b/src/SqlServer/EFCore.Bulk.SqlServer-5.0.csproj
@@ -5,6 +5,7 @@
     <DefineConstants>$(DefineConstants);EFCORE50;RELATIONAL;SQL_SERVER</DefineConstants>
     <AssemblyName>Microsoft.EntityFrameworkCore.Bulk.SqlServer</AssemblyName>
     <RootNamespace>Microsoft.EntityFrameworkCore</RootNamespace>
+    <PackageId>$(ExtensionPackagePrefix).SqlServer</PackageId>
   </PropertyGroup>
 
   <ItemGroup>
@@ -14,7 +15,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="$(EFCore50Version)" Condition=" $(EFCore50SourceDirectory) == '' " />
     <ProjectReference Include="$(EFCore50SourceDirectory)\src\EFCore.SqlServer\EFCore.SqlServer.csproj" Condition=" $(EFCore50SourceDirectory) != '' " />
-    <ProjectReference Include="..\Relational\Microsoft.EntityFrameworkCore.Bulk.Relational-5.0.csproj" />
+    <ProjectReference Include="..\Relational\EFCore.Bulk.Relational-5.0.csproj" />
   </ItemGroup>
 
 </Project>
