--- a/src/Sqlite/EFCore.Bulk.Sqlite-5.0.csproj
+++ b/src/Sqlite/EFCore.Bulk.Sqlite-5.0.csproj
@@ -5,6 +5,7 @@
     <DefineConstants>$(DefineConstants);EFCORE50;RELATIONAL;SQLITE</DefineConstants>
     <AssemblyName>Microsoft.EntityFrameworkCore.Bulk.Sqlite</AssemblyName>
     <RootNamespace>Microsoft.EntityFrameworkCore</RootNamespace>
+    <PackageId>$(ExtensionPackagePrefix).Sqlite</PackageId>
   </PropertyGroup>
 
   <ItemGroup>
@@ -14,7 +15,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Core" Version="$(EFCore50Version)" Condition=" $(EFCore50SourceDirectory) == '' " />
     <ProjectReference Include="$(EFCore50SourceDirectory)\src\EFCore.Sqlite.Core\EFCore.Sqlite.Core.csproj" Condition=" $(EFCore50SourceDirectory) != '' " />
-    <ProjectReference Include="..\Relational\Microsoft.EntityFrameworkCore.Bulk.Relational-5.0.csproj" />
+    <ProjectReference Include="..\Relational\EFCore.Bulk.Relational-5.0.csproj" />
   </ItemGroup>
 
 </Project>
