--- a/test/Specifications/EFCore.Bulk.Tests-5.0.csproj
+++ b/test/Specifications/EFCore.Bulk.Tests-5.0.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Abstraction\Microsoft.EntityFrameworkCore.Bulk-5.0.csproj" />
+    <ProjectReference Include="..\..\src\Abstraction\EFCore.Bulk-5.0.csproj" />
     <ProjectReference Include="..\TestUtilities\EFCore.TestUtilities.csproj" />
   </ItemGroup>
 
