--- a/test/SqlServer/EFCore.Bulk.SqlServer.Tests-5.0.csproj
+++ b/test/SqlServer/EFCore.Bulk.SqlServer.Tests-5.0.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\SqlServer\Microsoft.EntityFrameworkCore.Bulk.SqlServer-5.0.csproj" />
+    <ProjectReference Include="..\..\src\SqlServer\EFCore.Bulk.SqlServer-5.0.csproj" />
     <ProjectReference Include="..\Relational\EFCore.Bulk.Relational.Tests-5.0.csproj" />
   </ItemGroup>
 
