--- a/test/Sqlite/EFCore.Bulk.Sqlite.Tests-5.0.csproj
+++ b/test/Sqlite/EFCore.Bulk.Sqlite.Tests-5.0.csproj
@@ -18,7 +18,7 @@
   <ItemGroup>
     <PackageReference Include="SQLitePCLRaw.bundle_e_sqlite3" Version="2.0.4" />
     <ProjectReference Include="..\Relational\EFCore.Bulk.Relational.Tests-5.0.csproj" />
-    <ProjectReference Include="..\..\src\Sqlite\Microsoft.EntityFrameworkCore.Bulk.Sqlite-5.0.csproj" />
+    <ProjectReference Include="..\..\src\Sqlite\EFCore.Bulk.Sqlite-5.0.csproj" />
   </ItemGroup>
 
   <ItemGroup>
